# aoc2024

./: .gitignore  CMakeLists.txt  README.md
day1/: day1.cpp
day10/: day10.cpp
day11/: day11.cpp
day12/: day12.cpp
day14/: day14.cpp  robot.h
day2/: day2.cpp
day25/: day25.cpp
day3/: day3.cpp
day4/: day4.cpp
day5/: day5.cpp
day6/: day6.cpp  mapTraversal.cpp  mapTraversal.hpp
day7/: day7.py
day8/: CMakeLists.txt  antenna.h  day8.cpp
day9/: day9.cpp  diskmap.cpp  diskmap.h
dayX/: CMakeLists.txt  dayX.cpp
util/: CMakeLists.txt
util/include/: functions.h  input.h  map.h  point.h
util/src/: functions.cpp  input.cpp  map.cpp
